# rest-framework-react-lesson

./: justfile  pyproject.toml
api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_task.py
task_manager/: settings.py  urls.py
ui/src/: App.tsx  Login.module.sass  Login.tsx
