[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Vadym <s57111702@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "*"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
